--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prime Bay</title>
+    <title>H2 Canteen</title>
+    <!-- <title>Prime Bay</title> -->
   </head>
   <body>
     <div id="root"></div>
