add global order status

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.webp" />
+    <link rel="icon" type="image/svg+xml" href="/h2-canteen.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ecommerce Website">
     <title>H2 Canteen</title>
     <!-- <title>Prime Bay</title> -->
   </head>
