make seo better, add order details page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/h2-canteen.webp" />
+    <link rel="canonical" href="https://h2vidhi.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Ecommerce Website">
-    <title>H2 Canteen</title>
-    <!-- <title>Prime Bay</title> -->
+    <meta name="description" content="Order delicious meals online from H2 Canteen at IIT Bombay and enjoy fast delivery right to your hostel. Convenient, tasty, and hassle-free food service!">
+    <meta name="keywords" content="H2 Canteen, h2 hostel, h2, hostel, hostel 2, IIT Bombay, online food delivery IIT Bombay, hostel food delivery, order food online IIT, H2 Canteen menu, IIT Bombay canteen, IIT Bombay food, fast food delivery IIT, IIT Bombay campus food, iitb, h2 canteen iitb">
+    <meta name="author" content="H2 canteen" />
+    <title>H2 Canteen IIT Bombay - Online Food Delivery to Your Hostel</title>
   </head>
   <body>
     <div id="root"></div>
